# C-Render

./: .gitmodules  CMakeLists.txt
include/: camera.h  color.h  image.h  light.h  material.h  mesh.h  node.h  object.h  point.h  renderer.h  scene.h  scene_manager.h  var.h  window.h
include/shaders/: flat_shader.h  gouraud_shader.h  pbr_shader.h  phong_shader.h  shader.h
include/textures/: image_texture.h  solid_texture.h  texture.h
src/: camera.cpp  image.cpp  main.cpp  node.cpp  point.cpp  renderer.cpp  scene.cpp  scene_manager.cpp  window.cpp
